Plot feature correlations

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1710,17 +1710,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(2, 2, figsize=(16, 12))\n",
-    "ax[0][0].set_title(\"Bin Width = 0.5\")\n",
-    "_ = sns.histplot(train_readings_df, x=\"Time\", binwidth=0.5, kde=True, ax=ax[0][0])\n",
-    "ax[0][1].set_title(\"Bin Width = 1\")\n",
-    "_ = sns.histplot(train_readings_df, x=\"Time\", binwidth=1, kde=True, ax=ax[0][1])\n",
-    "ax[1][0].set_title(\"Bin Width = 2\")\n",
-    "_ = sns.histplot(train_readings_df, x=\"Time\", binwidth=2, kde=True, ax=ax[1][0])\n",
-    "ax[1][1].set_title(\"Bin Width = 2.26\")\n",
-    "_ = sns.histplot(train_readings_df, x=\"Time\", binwidth=2.26, kde=True, ax=ax[1][1])\n",
-    "fig.savefig(os.path.join(FIGURES_FOLDER, \"time_histograms.png\"), bbox_inches=\"tight\")\n",
-    "plt.close()"
+    "# fig, ax = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "# ax[0][0].set_title(\"Bin Width = 0.5\")\n",
+    "# _ = sns.histplot(train_readings_df, x=\"Time\", binwidth=0.5, kde=True, ax=ax[0][0])\n",
+    "# ax[0][1].set_title(\"Bin Width = 1\")\n",
+    "# _ = sns.histplot(train_readings_df, x=\"Time\", binwidth=1, kde=True, ax=ax[0][1])\n",
+    "# ax[1][0].set_title(\"Bin Width = 2\")\n",
+    "# _ = sns.histplot(train_readings_df, x=\"Time\", binwidth=2, kde=True, ax=ax[1][0])\n",
+    "# ax[1][1].set_title(\"Bin Width = 2.26\")\n",
+    "# _ = sns.histplot(train_readings_df, x=\"Time\", binwidth=2.26, kde=True, ax=ax[1][1])\n",
+    "# fig.savefig(os.path.join(FIGURES_FOLDER, \"time_histograms.png\"), bbox_inches=\"tight\")\n",
+    "# plt.close()"
    ]
   },
   {
@@ -2132,11 +2132,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(8, 8, figsize=(64, 64))\n",
-    "for i in range(64):\n",
-    "    _ = sns.lineplot(sample_df, x=\"Time\", y=f\"D{i+1}\", hue=\"Patient ID\", palette=\"tab10\", ax=ax[i // 8][i % 8])\n",
-    "fig.savefig(os.path.join(FIGURES_FOLDER, \"raw_samples_timeline.png\"), bbox_inches=\"tight\")\n",
-    "plt.close()"
+    "# fig, ax = plt.subplots(8, 8, figsize=(64, 64))\n",
+    "# for i in range(64):\n",
+    "#     _ = sns.lineplot(sample_df, x=\"Time\", y=f\"D{i+1}\", hue=\"Patient ID\", palette=\"tab10\", ax=ax[i // 8][i % 8])\n",
+    "# fig.savefig(os.path.join(FIGURES_FOLDER, \"raw_samples_timeline.png\"), bbox_inches=\"tight\")\n",
+    "# plt.close()"
    ]
   },
   {
@@ -2933,12 +2933,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(8, 8, figsize=(64, 64))\n",
-    "for i in range(64):\n",
-    "    col = f\"D{i+1}\"\n",
-    "    _ = sns.lineplot(result, x=\"Time\", y=col, hue=\"Patient ID\", palette=\"tab10\", ax=ax[i // 8][i % 8])\n",
-    "fig.savefig(os.path.join(FIGURES_FOLDER, \"raw_samples_timeline_trend_removed.png\"), bbox_inches=\"tight\")\n",
-    "plt.close()"
+    "# fig, ax = plt.subplots(8, 8, figsize=(64, 64))\n",
+    "# for i in range(64):\n",
+    "#     col = f\"D{i+1}\"\n",
+    "#     _ = sns.lineplot(result, x=\"Time\", y=col, hue=\"Patient ID\", palette=\"tab10\", ax=ax[i // 8][i % 8])\n",
+    "# fig.savefig(os.path.join(FIGURES_FOLDER, \"raw_samples_timeline_trend_removed.png\"), bbox_inches=\"tight\")\n",
+    "# plt.close()"
    ]
   },
   {
@@ -2946,6 +2946,69 @@
    "metadata": {},
    "source": [
     "![Raw Samples on Timeline with Trend Removed](figures/raw_samples_timeline_trend_removed.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(64, 64))\n",
+    "corr = result[[f\"D{i+1}\" for i in range(64)]].corr()\n",
+    "_ = sns.heatmap(\n",
+    "    corr,\n",
+    "    vmin=-1,\n",
+    "    vmax=1,\n",
+    "    center=0,\n",
+    "    cmap=\"seismic\",\n",
+    "    cbar=False,\n",
+    "    annot=True,\n",
+    "    fmt=\".2f\",\n",
+    "    square=True,\n",
+    "    ax=ax,\n",
+    ")\n",
+    "fig.savefig(os.path.join(FIGURES_FOLDER, \"feature_heatmap.png\"), bbox_inches=\"tight\")\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Heatmap of Feature Correlations](figures/feature_heatmap.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(64, 64))\n",
+    "corr = result[[f\"D{i+1}\" for i in range(64)]].corr()\n",
+    "corr = corr.map(lambda x: x if abs(x) >= 0.95 else 0.0)\n",
+    "_ = sns.heatmap(\n",
+    "    corr,\n",
+    "    vmin=-1,\n",
+    "    vmax=1,\n",
+    "    center=0,\n",
+    "    cmap=\"seismic\",\n",
+    "    cbar=False,\n",
+    "    annot=True,\n",
+    "    fmt=\".2f\",\n",
+    "    square=True,\n",
+    "    ax=ax,\n",
+    ")\n",
+    "fig.savefig(os.path.join(FIGURES_FOLDER, \"feature_heatmap_masked95.png\"), bbox_inches=\"tight\")\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Feature Correlation Heatmap masked for high correlation](figures/feature_heatmap_masked95.png)"
    ]
   }
  ],
