--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1710,17 +1710,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, ax = plt.subplots(2, 2, figsize=(16, 12))\n",
-    "# ax[0][0].set_title(\"Bin Width = 0.5\")\n",
-    "# _ = sns.histplot(train_readings_df, x=\"Time\", binwidth=0.5, kde=True, ax=ax[0][0])\n",
-    "# ax[0][1].set_title(\"Bin Width = 1\")\n",
-    "# _ = sns.histplot(train_readings_df, x=\"Time\", binwidth=1, kde=True, ax=ax[0][1])\n",
-    "# ax[1][0].set_title(\"Bin Width = 2\")\n",
-    "# _ = sns.histplot(train_readings_df, x=\"Time\", binwidth=2, kde=True, ax=ax[1][0])\n",
-    "# ax[1][1].set_title(\"Bin Width = 2.26\")\n",
-    "# _ = sns.histplot(train_readings_df, x=\"Time\", binwidth=2.26, kde=True, ax=ax[1][1])\n",
-    "# fig.savefig(os.path.join(FIGURES_FOLDER, \"time_histograms.png\"), bbox_inches=\"tight\")\n",
-    "# plt.close()"
+    "fig, ax = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "ax[0][0].set_title(\"Bin Width = 0.5\")\n",
+    "_ = sns.histplot(train_readings_df, x=\"Time\", binwidth=0.5, kde=True, ax=ax[0][0])\n",
+    "ax[0][1].set_title(\"Bin Width = 1\")\n",
+    "_ = sns.histplot(train_readings_df, x=\"Time\", binwidth=1, kde=True, ax=ax[0][1])\n",
+    "ax[1][0].set_title(\"Bin Width = 2\")\n",
+    "_ = sns.histplot(train_readings_df, x=\"Time\", binwidth=2, kde=True, ax=ax[1][0])\n",
+    "ax[1][1].set_title(\"Bin Width = 2.26\")\n",
+    "_ = sns.histplot(train_readings_df, x=\"Time\", binwidth=2.26, kde=True, ax=ax[1][1])\n",
+    "fig.savefig(os.path.join(FIGURES_FOLDER, \"time_histograms.png\"), bbox_inches=\"tight\")\n",
+    "plt.close()"
    ]
   },
   {
@@ -2132,11 +2132,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, ax = plt.subplots(8, 8, figsize=(64, 64))\n",
-    "# for i in range(64):\n",
-    "#     _ = sns.lineplot(sample_df, x=\"Time\", y=f\"D{i+1}\", hue=\"Patient ID\", palette=\"tab10\", ax=ax[i // 8][i % 8])\n",
-    "# fig.savefig(os.path.join(FIGURES_FOLDER, \"raw_samples_timeline.png\"), bbox_inches=\"tight\")\n",
-    "# plt.close()"
+    "fig, ax = plt.subplots(8, 8, figsize=(64, 64))\n",
+    "for i in range(64):\n",
+    "    _ = sns.lineplot(sample_df, x=\"Time\", y=f\"D{i+1}\", hue=\"Patient ID\", palette=\"tab10\", ax=ax[i // 8][i % 8])\n",
+    "fig.savefig(os.path.join(FIGURES_FOLDER, \"raw_samples_timeline.png\"), bbox_inches=\"tight\")\n",
+    "plt.close()"
    ]
   },
   {
@@ -2933,12 +2933,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, ax = plt.subplots(8, 8, figsize=(64, 64))\n",
-    "# for i in range(64):\n",
-    "#     col = f\"D{i+1}\"\n",
-    "#     _ = sns.lineplot(result, x=\"Time\", y=col, hue=\"Patient ID\", palette=\"tab10\", ax=ax[i // 8][i % 8])\n",
-    "# fig.savefig(os.path.join(FIGURES_FOLDER, \"raw_samples_timeline_trend_removed.png\"), bbox_inches=\"tight\")\n",
-    "# plt.close()"
+    "fig, ax = plt.subplots(8, 8, figsize=(64, 64))\n",
+    "for i in range(64):\n",
+    "    col = f\"D{i+1}\"\n",
+    "    _ = sns.lineplot(result, x=\"Time\", y=col, hue=\"Patient ID\", palette=\"tab10\", ax=ax[i // 8][i % 8])\n",
+    "fig.savefig(os.path.join(FIGURES_FOLDER, \"raw_samples_timeline_trend_removed.png\"), bbox_inches=\"tight\")\n",
+    "plt.close()"
    ]
   },
   {
